[package]
name = "pddl"
version = "0.0.8-unstable"
description = "A PDDL 3.1 parser, strongly typed"
license = "EUPL-1.2"
documentation = "https://docs.rs/pddl"
categories = ["parser-implementations", "science", "simulation"]
keywords = ["pddl", "planning", "parser"]
repository = "https://github.com/sunsided/pddl-rs"
readme = "README.md"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
edition = "2021"
rust-version = "1.68.0"

[features]
default = ["parser", "interning", "pretty"]
parser = ["dep:nom", "dep:nom-greedyerror", "dep:nom_locate", "dep:thiserror"]
interning = ["dep:lazy_static"]

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
nom = { version = "7.1.3", optional = true }
nom-greedyerror = { version = "0.5.0", optional = true }
nom_locate = { version = "4.2.0", optional = true }
pretty = { version = "0.12.1", optional = true }
thiserror = { version = "1.0.61", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
